h8300: Handle .gnu_object_only section

PR ld/12291
	PR ld/12430
	PR ld/13298
	* config/tc-h8300.c (h8300_elf_section): Handle .gnu_object_only
	section.